# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-language"
description = "Language definitions and parsers for Thread"
keywords = ["ast", "pattern", "codemod", "search", "rewrite", "languages"]
license = "AGPL-3.0-or-later AND MIT"
readme = "README.md"
categories = ["ast", "pattern", "codemod", "search", "rewrite",]
version = "0.1.0"
authors = [
  "Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>",
  "Knitli Inc <knitli@knit.li>",
  "Adam Poulemanos for Knitli <adam@knit.li>",
]
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
include.workspace = true

[build-dependencies]
cc = "1.2.30"

[dependencies]
thread-ast-engine = { workspace = true, features = ["parsing"] }
thread-utils = { workspace = true, default-features = false, features = [
  "hashers",
] }
ignore.workspace = true
serde.workspace = true
tree-sitter.workspace = true

tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-css = { version = "0.23.2", optional = true }
tree-sitter-elixir = { version = "0.3.4", optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-haskell = { version = "0.23.1", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.23.1", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-kotlin = { version = "0.4.0", optional = true, package = "tree-sitter-kotlin-sg" }
tree-sitter-lua = { version = "0.2.0", optional = true }
tree-sitter-php = { version = "0.23.11", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-swift = { version = "0.7.1", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.1", optional = true }

[features]
default = ["builtin-parser"]
matching = ["thread-ast-engine/matching"]

# Individual language features
bash = ["tree-sitter-bash"]
c = ["tree-sitter-c"]
cpp = ["tree-sitter-cpp"]
csharp = ["tree-sitter-c-sharp"]
css = ["tree-sitter-css"]
elixir = ["tree-sitter-elixir"]
go = ["tree-sitter-go"]
haskell = ["tree-sitter-haskell"]
html = ["tree-sitter-html"]
html-embedded = ["html", "css", "matching", "typescript", "tsx", "javascript"]
java = ["tree-sitter-java"]
javascript = ["tree-sitter-javascript"]
json = ["tree-sitter-json"]
kotlin = ["tree-sitter-kotlin"]
lua = ["tree-sitter-lua"]
php = ["tree-sitter-php"]
python = ["tree-sitter-python"]
ruby = ["tree-sitter-ruby"]
rust = ["tree-sitter-rust"]
scala = ["tree-sitter-scala"]
swift = ["tree-sitter-swift"]
typescript = ["tree-sitter-typescript"]
tsx = ["tree-sitter-typescript"]
yaml = ["tree-sitter-yaml"]

# Language groups
builtin-parser = [
  "bash",
  "c",
  "cpp",
  "csharp",
  "css",
  "elixir",
  "go",
  "haskell",
  "html",
  "html-embedded",
  "java",
  "javascript",
  "json",
  "kotlin",
  "lua",
  "php",
  "python",
  "ruby",
  "rust",
  "scala",
  "swift",
  "typescript",
  "tsx",
  "yaml",
]
napi-lang = [
  "css",
  "html",
  "html-embedded",
  "javascript",
  "typescript",
  "tsx",
]
profiling = []

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
thread-ast-engine = { workspace = true, features = ["matching", "parsing"] }

[[bench]]
name = "performance"
harness = false
