# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-parse"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
thread-ast-grep = { path = "../core", features = ["all-core", "language"] }
serde.workspace = true

# Conditional ast-grep language support
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thread-languages = { workspace = true, features = ["all"] }

[lints]
workspace = true
