[package]
name = "thread-parser"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon.workspace = true
dashmap.workspace = true
string-interner.workspace = true
petgraph.workspace = true

[lints]
workspace = true
