# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-rule-engine"
description = "Rule-based scanning and transformation engine for Thread"
keywords = ["ast", "pattern", "codemod", "search", "rewrite", "rules"]
categories = ["command-line-utilities", "development-tools", "parsing"]
version = "0.1.0"
license = "AGPL-3.0-or-later AND MIT"
readme = "README.md"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
include.workspace = true

# [features] # we need to separate serialization, but that's a big job, and ideally rework ast-engine to allow narrower featuring

[dependencies]
thread-ast-engine = { workspace = true, features = ["parsing", "matching"] }
thread-utils = { workspace = true, default-features = false, features = [
  "hashers",
  "simd",
] }
bit-set.workspace = true
globset = "0.4.16"
regex.workspace = true
serde.workspace = true
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
schemars.workspace = true

[dev-dependencies]
ast-grep-core = { version = "0.39.1", features = ["tree-sitter"] }
ast-grep-config = { version = "0.39.1" }
ast-grep-language = { version = "0.39.1", features = ["builtin-parser"] }
criterion = { version = "0.6", features = ["html_reports"] }
thread-ast-engine = { workspace = true, features = ["parsing", "matching"] }
thread-language = { workspace = true, features = ["all-parsers"] }
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter.workspace = true

[build-dependencies]
cc = "1.2.30"

[[bench]]
name = "simple_benchmarks"
harness = false

[[bench]]
name = "ast_grep_comparison"
harness = false

[[bench]]
name = "rule_engine_benchmarks"
harness = false

[[bench]]
name = "comparison_benchmarks"
harness = false
