# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
thread-core = { workspace = true }

[features]
default = ["dashmap"]
production = ["thread-core/production"]
dashmap = ["thread-core/dashmap"]


[lints]
workspace = true
