[package]
name = "thread-cocoindex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "CocoIndex integration for Thread"
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.88"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

# Workspace dependencies
thread-ast-engine = { workspace = true }
thread-language = { workspace = true }
thread-services = { workspace = true }
thread-utils = { workspace = true }

# CocoIndex dependency
cocoindex = { git = "https://github.com/cocoindex-io/cocoindex", branch = "main" }

[features]
default = []
cloudflare = [] # Feature flag for Edge deployment specific logic
