[package]
name = "thread-wasm"
description = "WASM bindings for Thread. Deploy Thread to the web!"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
# TODO: Add compile-for-os support as a universal binary (i.e. for moonrepo)
dlmalloc = { version = "0.2.9", features = ["global"] }
js-sys = { version = "0.3.77" }
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3.77" }
thread-core = { version = "0.0.1", path = "../thread-core" }
serde.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

rayon = { version = "1.11.0", features = ["web_spin_lock"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lints]
workspace = true

[lib]
name="thread_wasm"
crate-type = ["cdylib", "rlib"]
path="src/lib.rs"


[features]
worker=["panic_hook"]
browser=["multi-threading"]
default=[]
panic_hook = ['console_error_panic_hook']
multi-threading = ["dep:rayon"]

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = false
# Should we omit the default import path?
omit-default-module-path = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
split-linked-modules = true
omit-default-module-path = true
