# SPDX-FileCopyrightText: 2025 Knitli Inc. <knitli@knit.li>
# SPDX-FileContributor: Adam Poulemanos <adam@knit.li>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "thread-utils"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
include.workspace = true

[dependencies]
rapidhash = { workspace = true, features = ["std", "rand"], optional = true }

[features]
default = ["hashers"]
hashers = ["dep:rapidhash"]
serialization = []

[lints]
workspace = true
